# KuzuDB-DotNetInterface

./: .gitignore  README.md  SWIG-CLI-Command.txt
KuzuDB-net/: KuzuDB-TestAndExplorer.sln
KuzuDB-net/ConsoleAppExample/: ConsoleAppExample.csproj  Program.cs
KuzuDB-net/ConsoleAppExample/Properties/: AssemblyInfo.cs
KuzuDB-net/ConsoleAppExample/csv/: users.csv
KuzuDB-net/KuzuDB-Net/: KuzuDB-Net.csproj  KuzuDB-Net.sln
KuzuDB-net/KuzuDB-Net/KuzuDB-Net/: KuzuDB-Net.csproj
KuzuDB-net/KuzuDB-Net/KuzuDB-TestAndExplore/: KuzuDB-TestAndExplorer.vbproj
KuzuDB-net/KuzuDB-Net/Properties/: AssemblyInfo.cs
KuzuDB-net/KuzuDB-Net/WrapperFiles/: ArrowArray.cs  ArrowSchema.cs  KuzuDB.cs  KuzuDB_wrap.cxx  SWIGTYPE_p_f_p_ArrowArray__void.cs  SWIGTYPE_p_f_p_ArrowSchema__void.cs  SWIGTYPE_p_int8_t.cs  SWIGTYPE_p_p_ArrowArray.cs  SWIGTYPE_p_p_ArrowSchema.cs  SWIGTYPE_p_p_void.cs  SWIGTYPE_p_uint16_t.cs  SWIGTYPE_p_uint64_t.cs  kuzu_date_t.cs  (+20 more)
KuzuDB-net/KuzuDB-TestAndExplore/: KuzuDB-TestAndExplorer.vbproj
KuzuFiles/: kuzu.hpp
KuzuFiles/generated_classes/: kuzu_connection.cs  kuzu_data_type_id.cs  kuzu_database.cs  kuzu_date_t.cs  kuzu_flat_tuple.cs  kuzu_internal_id_t.cs  kuzu_interval_t.cs  kuzu_logical_type.cs  kuzu_node_val.cs  kuzu_prepared_statement.cs  kuzu_query_result.cs  kuzu_query_summary.cs  kuzu_rel_val.cs  kuzu_timestamp_t.cs  kuzu_value.cs  kuzunet.cs  kuzunetPINVOKE.cs
SWIG-InputFile/: KuzuSWIGInterface.i  kuzu.i
instructions/: compilation of kuzu.MD  genration of wrapper classes and building dll.md
wrapperlib/: CMakeLists.txt  README.md  kuzu_wrap.cpp
(+15 files in other folders)
